# Spectra-Processing-Tool

./: bootstrap.cmd  bootstrap.py  bootstrap.sh  pyproject.toml  spectraProcessing.py
src/spectra_processing/: app.py  utils.ipynb
src/spectra_processing/resources/: fluorophor_data.txt
